Add debug HUD, improve mouse input accumulation, refine terrain biomes and G-load calculation, fix missile targeting and bullet hit detection

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     <div id="repair-cost-display"></div>
   </div>
 
+  <!-- Debug HUD -->
+  <div id="debug-hud"></div>
+
   <!-- Overlays for effects -->
   <div id="vignette-overlay"></div>
   <div id="redout-overlay"></div>
